tests/snapshots/tui_snapshot_test__tui_final_state.snap
---
source: tests/tui_snapshot_test.rs
expression: rendered
---
════════════════════════════════════════════════════════════════════════════════
ENTRENAR  ○ Done  00:01:00 Qwen2.5-Coder-0.5B  30 tok/s
────────────────────────────────────────────────────────────────────────────────
Epoch 15/15 ████████████████████ 100%    Step 16/16 ████████████████████ 100%
Loss 2.1000 ↓  Best 2.1000  LR 0.000600  Grad 2.50  ETA 00:00:00
────────────────────────────────────────────────────────────────────────────────
Loss History: ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣶⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀ [2.10 - 6.90]
────────────────────────────────────────────────────────────────────────────────
GPU: NVIDIA GeForce RTX 4  Util █████░░░░░░░░░░  35%  Temp 45°C  Power 110W
VRAM: █░░░░░░░░░░░░░░   9%  2.1G / 24G
────────────────────────────────────────────────────────────────────────────────
Epoch  Loss  Min  Max  LR  Trend
    1    5.3333    2.1000    6.9000    0.000600       
────────────────────────────────────────────────────────────────────────────────
Config: AdamW  Batch: 4  Checkpoint: ./experiments/test/checkpoints
════════════════════════════════════════════════════════════════════════════════
